Implement the basic HTML layout, including the container, card body, title, and buttons for increment, decrement, and reset.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class = "container">
         <div class="card-body"> 
-            <h1 id = "title">0</h1>
+            <h1 id = "title">0</h1s>
         <div class="card-btn">
             <button id = "increament">Increase</button>
             <button id = "decreament">Decrease</button>
