Enhance the appearance and layout of the increment, decrement, and reset buttons with CSS styling.

--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
+
 <body>
+    <div class="image"></div>
+    <div class="main-title"><h1>JS Counter App :)</h1></div>
     <div class = "container">
         <div class="card-body"> 
-            <h1 id = "title">0</h1s>
+            <h1 id = "title">0</h1>
         <div class="card-btn">
             <button id = "increament">Increase</button>
-            <button id = "decreament">Decrease</button>
             <button id = "reset">Reset</button>
+            <button id = "decreament">Decrease</button>
+        </div>    
         </div>
-            
-        </div>
+
     </div>
 
     <script src="script.js"></script>
