Add functionality to increment, decrement, and reset buttons with JavaScript.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class="card-body"> 
             <h1 id = "title">0</h1>
         <div class="card-btn">
-            <button id = "increament">Increase</button>
-            <button id = "reset">Reset</button>
-            <button id = "decreament">Decrease</button>
+            <button id = "increament" onclick="increase()">Increase</button>
+            <button id = "reset" onclick="reset()">Reset</button>
+            <button id = "decreament" onclick="decrease()">Decrease</button>
         </div>    
         </div>
 
